--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "framer-motion": "^2.6.14",
+    "gsap": "^3.5.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-inlinesvg": "^2.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3"
   },
